# ruspline

./: .gitignore  .shellhook  README.md  darwin.nix  linux.nix  shell  shell.nix
dev/: Cargo.toml  profile  rustfmt.toml
dev/src/: bench.rs  drawing.rs  main.rs  spline.rs  test.rs
prof/: main
