[package]
name = "spline"
version = "0.1.0"
edition = "2018"

[profile.release]
codegen-units = 1
panic = "abort"

[profile.bench]
codegen-units = 1

[dependencies]
arrayvec = "0.5.1"
cairo-rs = { version = "0.2", features = ["png"] }
rand = "0.7"
rand_distr = "0.2"

[[bin]]
name = "main"
path = "src/main.rs"
